# stereodiscerning_tetchiral

./: README.md  pyproject.toml
User's Guide/: Predictions_in_Colab.ipynb
stereodiscerning_gnn/: geometric_dataset.py  predict_optical_rotation.py  run_model.py  smiles_to_geometric_data.py  torch_geometric_model_loading.py
stereodiscerning_gnn/analysis/: gin_vs_sage.py  umap_vis.py
stereodiscerning_gnn/data/: best_model_state_dict  misassigned_molecules_test_set.csv  misassigned_molecules_test_smiles.txt
stereodiscerning_gnn/other_chiral_gnns_benchmarking/: ChiENN_testing.py  ChiGNN_testing.py
